# vitavermis

./: ProjectHome.md
archi/: README.txt  main_game_loop.txt
archi/modules-managers/: EntityState.txt  ItemState.txt  Localisation.txt  MsgDispatcher.txt  PhysMgr.txt  SpriteState.txt
archi/modules-managers/Entity/: Entity.txt
archi/modules-managers/Input/: InputEventListener.txt
archi/modules-managers/Physics/: ItemState.txt
archi/modules-managers/Render/: SpriteState.txt
docs/: Equipe_Contact.txt
docs/CR/: CR-2013-01-03.odt  CR-30-11-12.odt  CR_2012-08-21.eml  CR_2012-08-29.odt  CR_2012-09-05.odt  CR_2012-10-07.odt  CR_2012-10-19.txt  CR_2012-11-02.odt
docs/Old/: PadNomDeCode.txt  Projet+ludo-creatif.htm
docs/Old/Projet+ludo-creatif_fichiers/: 02184x66.js  549qx6xk-internal.css
tests/DemoLucas/exec/: launcher_to_get_crash_details.bat
tests/Demo_nico/: .classpath  .project
tests/SFML/: CMakeCache.txt  cmake_install.cmake
tests/shit_test_sfml/: launch.bat  make.bat
tests/shit_test_sfml/CMake/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/shit_test_sfml/html_doc/: Doxyfile
tests/shit_test_sfml/src/: Macros.hpp
tests/test_son_sfml/: main.cpp  resultats
tests/test_son_slick/: launcher_to_get_crash_details.bat
trunk/: .checkstyle  .classpath  CODING_STYLE.txt  DEV_COMMIT_README.txt  DEV_INSTALL_README.txt  WIP.txt
trunk/archi/: Prototype_requirements.txt
trunk/archi/bouml/: 134786.diagram  2.session  vitavermis.prj
trunk/archi/modules-managers/: HeroMgr.txt  RenderMgr.txt  WIP_Attacks.txt
trunk/archi/use_case_scenarios/: PlayerHitBadGuy.txt  UC0_PlayerJumpOnWall.txt  UC1_PlayerHitBadGuy.txt
trunk/data/: config.properties
trunk/docs/: Charte.odt
trunk/docs/CR/: CR-2012-11-09.odt  (+4 more)
trunk/exec/: colision_fixe.bat  demo1.bat  demo_V2.bat  linux_launcher.sh  win_launcher.bat
trunk/tools/: DEPENDENCIES.txt  checkstyle.xml  notabs.sh  vitavermis_checkstyle-suppressions.xml
trunk/trunk/: .classpath  .project  DEPENDENCIES.txt  DEV_INSTALL_README.txt  MANIFEST.MF  WIP.txt
trunk/tst/: test_config.properties
(+209 files in other folders)
